--- a/models/pom.xml
+++ b/models/pom.xml
@@ -46,7 +46,12 @@
 			<artifactId>gson-fire</artifactId>
 			<version>1.5.1</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.16.8</version>
+			<scope>provided</scope>
+		</dependency>
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-api</artifactId>
