Added Hard disk plugin Safer module resize

--- a/plugins/pom.xml
+++ b/plugins/pom.xml
@@ -17,6 +17,7 @@
         <module>systeminfo</module>
         <module>docker</module>
         <module>sonarrtv</module>
+        <module>harddisk</module>
     </modules>
 
     <dependencies>
