--- a/models/pom.xml
+++ b/models/pom.xml
@@ -62,6 +62,11 @@
             <artifactId>log4j-core</artifactId>
             <version>2.5</version>
         </dependency>
+        <dependency>
+            <groupId>com.sparkjava</groupId>
+            <artifactId>spark-core</artifactId>
+            <version>2.5</version>
+        </dependency>
 
     </dependencies>
 </project>
