--- a/plugins/pom.xml
+++ b/plugins/pom.xml
@@ -10,6 +10,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
+    <groupId>com.ftpix.homedash.plugins</groupId>
     <artifactId>plugins</artifactId>
     <packaging>pom</packaging>
 
@@ -18,11 +19,12 @@
         <module>docker</module>
         <module>sonarrtv</module>
         <module>harddisk</module>
+        <module>transmission</module>
     </modules>
 
     <dependencies>
         <dependency>
-            <groupId>${project.groupId}</groupId>
+            <groupId>com.ftpix.homedash</groupId>
             <artifactId>models</artifactId>
             <version>${project.version}</version>
         </dependency>
