--- a/web/pom.xml
+++ b/web/pom.xml
@@ -88,23 +88,28 @@
 
         <!-- plugins -->
         <dependency>
-            <groupId>${project.groupId}</groupId>
+            <groupId>com.ftpix.homedash.plugins</groupId>
             <artifactId>systeminfo</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>${project.groupId}</groupId>
+            <groupId>com.ftpix.homedash.plugins</groupId>
             <artifactId>docker</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>${project.groupId}</groupId>
+            <groupId>com.ftpix.homedash.plugins</groupId>
             <artifactId>sonarrtv</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>${project.groupId}</groupId>
+            <groupId>com.ftpix.homedash.plugins</groupId>
             <artifactId>harddisk</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.ftpix.homedash.plugins</groupId>
+            <artifactId>transmission</artifactId>
             <version>${project.version}</version>
         </dependency>
     </dependencies>
