PiHole module Font served locally Layout editing changes Better CSS Better WebSockets

--- a/plugins/pom.xml
+++ b/plugins/pom.xml
@@ -20,6 +20,7 @@
         <module>sonarrtv</module>
         <module>harddisk</module>
         <module>transmission</module>
+        <module>pihole</module>
     </modules>
 
     <dependencies>
