PortMapper plugin Module Data handling CSS fixes Plugin Listener PluginModuleMaintainer no more static

--- a/plugins/pom.xml
+++ b/plugins/pom.xml
@@ -21,6 +21,7 @@
         <module>harddisk</module>
         <module>transmission</module>
         <module>pihole</module>
+        <module>portmapper</module>
     </modules>
 
     <dependencies>
