--- a/web/pom.xml
+++ b/web/pom.xml
@@ -152,6 +152,7 @@
                         <goals>
                             <goal>compile</goal>
                         </goals>
+                        <phase>compile</phase>
                     </execution>
                 </executions>
             </plugin>
