--- a/models/pom.xml
+++ b/models/pom.xml
@@ -24,6 +24,11 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>com.mashape.unirest</groupId>
+            <artifactId>unirest-java</artifactId>
+            <version>1.4.9</version>
+        </dependency>
 
         <dependency>
             <groupId>com.h2database</groupId>
