--- a/web/pom.xml
+++ b/web/pom.xml
@@ -132,6 +132,12 @@
             <artifactId>portmapper</artifactId>
             <version>${project.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.ftpix.homedash.plugins</groupId>
+            <artifactId>couchpotato</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 
 
