- Network monitor plugin

--- a/plugins/pom.xml
+++ b/plugins/pom.xml
@@ -23,6 +23,7 @@
         <module>pihole</module>
         <module>portmapper</module>
         <module>couchpotato</module>
+        <module>network-monitor</module>
     </modules>
 
     <dependencies>
