add Dynamic DNS plugin

--- a/plugins/pom.xml
+++ b/plugins/pom.xml
@@ -24,6 +24,7 @@
         <module>portmapper</module>
         <module>couchpotato</module>
         <module>network-monitor</module>
+        <module>dynamicdns</module>
     </modules>
 
     <dependencies>
