--- a/web/pom.xml
+++ b/web/pom.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0"?>
 <project
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
-        xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+        xmlns="http://maven.apache.org/POM/4.0.0"
+        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.ftpix.homedash</groupId>
@@ -144,6 +145,12 @@
             <artifactId>networkmonitor</artifactId>
             <version>${project.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.ftpix.homedash.plugins</groupId>
+            <artifactId>dynamicdns</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 
 
@@ -154,7 +161,8 @@
                 <artifactId>lesscss-maven-plugin</artifactId>
                 <configuration>
                     <sourceDirectory>${project.build.sourceDirectory}/assets/less</sourceDirectory>
-                    <outputDirectory>${project.build.resources[0].directory}/web/css</outputDirectory>
+                    <outputDirectory>${project.build.resources[0].directory}/web/css
+                    </outputDirectory>
                     <compress>true</compress>
                     <includes>
                         <include>*.less</include>
@@ -185,9 +193,11 @@
                             <goal>uglify</goal>
                         </goals>
                         <configuration>
-                            <sourceDirectory>${project.build.sourceDirectory}/assets/js</sourceDirectory>
+                            <sourceDirectory>${project.build.sourceDirectory}/assets/js
+                            </sourceDirectory>
 
-                            <outputDirectory>${project.build.resources[0].directory}/web/js</outputDirectory>
+                            <outputDirectory>${project.build.resources[0].directory}/web/js
+                            </outputDirectory>
                         </configuration>
                     </execution>
                 </executions>
