add notification module.

--- a/plugins/pom.xml
+++ b/plugins/pom.xml
@@ -34,6 +34,12 @@
             <version>${project.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.ftpix.homedash</groupId>
+            <artifactId>notifications</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
     </dependencies>
 
     <build>
