--- a/web/pom.xml
+++ b/web/pom.xml
@@ -158,6 +158,12 @@
             <artifactId>dynamicdns</artifactId>
             <version>${project.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.ftpix.homedash.plugins</groupId>
+            <artifactId>googlepubliccalendar</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 
 
