Added plugin to follow MMA events

--- a/plugins/pom.xml
+++ b/plugins/pom.xml
@@ -26,6 +26,7 @@
         <module>network-monitor</module>
         <module>dynamicdns</module>
         <module>googlepubliccalendar</module>
+        <module>mma</module>
     </modules>
 
     <dependencies>
