--- a/web/pom.xml
+++ b/web/pom.xml
@@ -164,6 +164,12 @@
             <artifactId>googlepubliccalendar</artifactId>
             <version>${project.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.ftpix.homedash.plugins</groupId>
+            <artifactId>mma</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 
 
