--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.ftpix.homedash</groupId>
 	<artifactId>homedash</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0</version>
 	<name>Archetype - homedash</name>
 	<url>http://maven.apache.org</url>
 	<packaging>pom</packaging>
