--- a/plugins/pom.xml
+++ b/plugins/pom.xml
@@ -6,8 +6,7 @@
     <parent>
         <artifactId>homedash</artifactId>
         <groupId>com.ftpix.homedash</groupId>
-        <version>0.0.1-SNAPSHOT</version>
-    </parent>
+        <version>1.0</version>     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.ftpix.homedash.plugins</groupId>
