--- a/plugins/mma/pom.xml
+++ b/plugins/mma/pom.xml
@@ -7,8 +7,7 @@
     <parent>
         <groupId>com.ftpix.homedash.plugins</groupId>
         <artifactId>plugins</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
-    </parent>
+        <version>1.0</version>     </parent>
 
     <artifactId>mma</artifactId>
     <name>mma</name>
