--- a/plugins/network-monitor/pom.xml
+++ b/plugins/network-monitor/pom.xml
@@ -7,7 +7,8 @@
     <parent>
         <groupId>com.ftpix.homedash.plugins</groupId>
         <artifactId>plugins</artifactId>
-        <version>1.0</version>     </parent>
+        <version>1.0</version>
+    </parent>
 
     <artifactId>networkmonitor</artifactId>
     <name>networkmonitor</name>
@@ -29,17 +30,10 @@
 
 
         <dependency>
-            <groupId>org.fusesource</groupId>
-            <artifactId>sigar</artifactId>
-            <version>${sigar.version}</version>
+            <groupId>com.github.dblock</groupId>
+            <artifactId>oshi-core</artifactId>
+            <version>3.3</version>
         </dependency>
-        <dependency>
-            <groupId>org.fusesource</groupId>
-            <artifactId>sigar</artifactId>
-            <version>${sigar.version}</version>
-            <classifier>native</classifier>
-        </dependency>
-
 
     </dependencies>
 
