--- a/plugins/harddisk/pom.xml
+++ b/plugins/harddisk/pom.xml
@@ -7,7 +7,8 @@
     <parent>
         <groupId>com.ftpix.homedash.plugins</groupId>
         <artifactId>plugins</artifactId>
-        <version>1.0</version>     </parent>
+        <version>1.0</version>
+    </parent>
 
     <artifactId>harddisk</artifactId>
     <name>harddisk</name>
@@ -20,6 +21,13 @@
         <sigar.version>1.6.4</sigar.version>
     </properties>
     <dependencies>
+
+
+        <dependency>
+            <groupId>com.github.dblock</groupId>
+            <artifactId>oshi-core</artifactId>
+            <version>3.3</version>
+        </dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
