--- a/notifications/pom.xml
+++ b/notifications/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <artifactId>homedash</artifactId>
         <groupId>com.ftpix.homedash</groupId>
-        <version>1.0</version>
+        <version>LATEST</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
