--- a/plugins/couchpotato/pom.xml
+++ b/plugins/couchpotato/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>com.ftpix.homedash.plugins</groupId>
         <artifactId>plugins</artifactId>
-        <version>1.0</version>     </parent>
+        <version>LATEST</version>     </parent>
 
     <artifactId>couchpotato</artifactId>
     <name>couchpotato</name>
