--- a/plugins/pom.xml
+++ b/plugins/pom.xml
@@ -6,7 +6,8 @@
     <parent>
         <artifactId>homedash</artifactId>
         <groupId>com.ftpix.homedash</groupId>
-        <version>1.0</version>     </parent>
+        <version>LATEST</version>
+    </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.ftpix.homedash.plugins</groupId>
