--- a/plugins/systeminfo/pom.xml
+++ b/plugins/systeminfo/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>com.ftpix.homedash.plugins</groupId>
         <artifactId>plugins</artifactId>
-        <version>1.0</version>
+        <version>LATEST</version>
     </parent>
 
     <artifactId>systeminfo</artifactId>
