add method to get IP via ipify website for dynamic dns module when the router method fails.

--- a/models/pom.xml
+++ b/models/pom.xml
@@ -12,10 +12,15 @@
     <artifactId>models</artifactId>
 
     <name>models</name>
+    <version>1.0.6</version>
     <url>http://maven.apache.org</url>
+
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
+
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
