--- a/plugins/couchpotato/pom.xml
+++ b/plugins/couchpotato/pom.xml
@@ -7,11 +7,12 @@
     <parent>
         <groupId>com.ftpix.homedash.plugins</groupId>
         <artifactId>plugins</artifactId>
-        <version>LATEST</version>     </parent>
+        <version>LATEST</version>
+    </parent>
 
     <artifactId>couchpotato</artifactId>
     <name>couchpotato</name>
-
+    <version>1.0.6</version>
     <url>http://maven.apache.org</url>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
