--- a/plugins/dynamicdns/pom.xml
+++ b/plugins/dynamicdns/pom.xml
@@ -7,10 +7,12 @@
     <parent>
         <groupId>com.ftpix.homedash.plugins</groupId>
         <artifactId>plugins</artifactId>
-        <version>LATEST</version>     </parent>
+        <version>1.0.6</version>
+    </parent>
 
     <artifactId>dynamicdns</artifactId>
     <name>dynamicdns</name>
+    <version>1.0.7</version>
 
     <url>http://maven.apache.org</url>
     <properties>
