--- a/plugins/harddisk/pom.xml
+++ b/plugins/harddisk/pom.xml
@@ -12,7 +12,7 @@
 
     <artifactId>harddisk</artifactId>
     <name>harddisk</name>
-
+    <version>1.0.6</version>
     <url>http://maven.apache.org</url>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
