--- a/plugins/mma/pom.xml
+++ b/plugins/mma/pom.xml
@@ -11,7 +11,7 @@
 
     <artifactId>mma</artifactId>
     <name>mma</name>
-
+    <version>1.0.6</version>
     <url>http://maven.apache.org</url>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
