--- a/plugins/systeminfo/pom.xml
+++ b/plugins/systeminfo/pom.xml
@@ -12,7 +12,7 @@
 
     <artifactId>systeminfo</artifactId>
     <name>systeminfo</name>
-
+    <version>1.0.6</version>
     <url>http://maven.apache.org</url>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
