--- a/web/pom.xml
+++ b/web/pom.xml
@@ -13,7 +13,7 @@
 
     <artifactId>web</artifactId>
     <name>web</name>
-
+    <version>1.0.7</version>
     <url>http://maven.apache.org</url>
 
     <properties>
@@ -105,81 +105,81 @@
         <dependency>
             <groupId>com.ftpix.homedash</groupId>
             <artifactId>notifications</artifactId>
-            <version>${project.version}</version>
+            <version>1.0.6</version>
         </dependency>
 
         <dependency>
             <groupId>com.ftpix.homedash</groupId>
             <artifactId>updater</artifactId>
-            <version>${project.version}</version>
+            <version>LATEST</version>
         </dependency>
 
         <!-- plugins -->
         <dependency>
             <groupId>com.ftpix.homedash.plugins</groupId>
             <artifactId>systeminfo</artifactId>
-            <version>${project.version}</version>
+            <version>1.0.6</version>
         </dependency>
         <dependency>
             <groupId>com.ftpix.homedash.plugins</groupId>
             <artifactId>docker</artifactId>
-            <version>${project.version}</version>
+            <version>1.0.6</version>
         </dependency>
         <dependency>
             <groupId>com.ftpix.homedash.plugins</groupId>
             <artifactId>sonarrtv</artifactId>
-            <version>${project.version}</version>
+            <version>1.0.6</version>
         </dependency>
         <dependency>
             <groupId>com.ftpix.homedash.plugins</groupId>
             <artifactId>harddisk</artifactId>
-            <version>${project.version}</version>
+            <version>1.0.6</version>
         </dependency>
         <dependency>
             <groupId>com.ftpix.homedash.plugins</groupId>
             <artifactId>transmission</artifactId>
-            <version>${project.version}</version>
+            <version>1.0.6</version>
         </dependency>
         <dependency>
             <groupId>com.ftpix.homedash.plugins</groupId>
             <artifactId>pihole</artifactId>
-            <version>${project.version}</version>
+            <version>1.0.6</version>
         </dependency>
 
         <dependency>
             <groupId>com.ftpix.homedash.plugins</groupId>
             <artifactId>portmapper</artifactId>
-            <version>${project.version}</version>
+            <version>1.0.6</version>
         </dependency>
 
         <dependency>
             <groupId>com.ftpix.homedash.plugins</groupId>
             <artifactId>couchpotato</artifactId>
-            <version>${project.version}</version>
+            <version>1.0.6</version>
         </dependency>
 
         <dependency>
             <groupId>com.ftpix.homedash.plugins</groupId>
             <artifactId>networkmonitor</artifactId>
-            <version>${project.version}</version>
+            <version>1.0.6</version>
         </dependency>
 
         <dependency>
             <groupId>com.ftpix.homedash.plugins</groupId>
             <artifactId>dynamicdns</artifactId>
-            <version>${project.version}</version>
+            <version>1.0.7</version>
         </dependency>
 
         <dependency>
             <groupId>com.ftpix.homedash.plugins</groupId>
             <artifactId>googlepubliccalendar</artifactId>
-            <version>${project.version}</version>
+            <version>1.0.6</version>
         </dependency>
 
         <dependency>
             <groupId>com.ftpix.homedash.plugins</groupId>
             <artifactId>mma</artifactId>
-            <version>${project.version}</version>
+            <version>1.0.6</version>
         </dependency>
     </dependencies>
 
@@ -300,9 +300,11 @@
                 <artifactId>github-release-plugin</artifactId>
                 <version>1.1.1</version>
                 <configuration>
-                    <description>Added smaller view for the MMA plugin. Now will show a slideshow of the main events when on size 3x2</description>
-                    <releaseName>${project.version}</releaseName>
-                    <tag>${project.version}</tag>
+                    <description>
+                        Fixed dynamic DNS plugin to use a web site to get the IP when the router method is not working.
+                    </description>
+                    <releaseName>${version}</releaseName>
+                    <tag>${version}</tag>
                     <serverId>github</serverId>
                     <!-- If your project has additional artifacts, such as ones produced by
                          the maven-assembly-plugin, you can define the following
@@ -311,7 +313,7 @@
                         <fileSet>
                             <directory>${project.build.directory}</directory>
                             <excludes>
-                                <exclude>web-${project.version}.jar</exclude>
+                                <exclude>web-${version}.jar</exclude>
                             </excludes>
                             <includes>
                                 <include>web*-assembly.zip</include>
