--- a/web/pom.xml
+++ b/web/pom.xml
@@ -13,7 +13,7 @@
 
     <artifactId>web</artifactId>
     <name>web</name>
-    <version>1.0.8</version>
+    <version>1.0.9</version>
     <url>http://maven.apache.org</url>
 
     <properties>
@@ -111,7 +111,7 @@
         <dependency>
             <groupId>com.ftpix.homedash</groupId>
             <artifactId>updater</artifactId>
-            <version>LATEST</version>
+            <version>${version}</version>
             <exclusions>
                 <exclusion>
                     <artifactId>jackson-annotations</artifactId>
@@ -137,7 +137,7 @@
         <dependency>
             <groupId>com.ftpix.homedash.plugins</groupId>
             <artifactId>docker</artifactId>
-            <version>1.0.6</version>
+            <version>1.0.7</version>
         </dependency>
         <dependency>
             <groupId>com.ftpix.homedash.plugins</groupId>
@@ -315,7 +315,7 @@
                 <version>1.1.1</version>
                 <configuration>
                     <description>
-                        Fixed dynamic DNS plugin to use a web site to get the IP when the router method is not working.
+                        Close docker plugin executor to avoid leaks
                     </description>
                     <releaseName>${version}</releaseName>
                     <tag>${version}</tag>
