--- a/plugins/pom.xml
+++ b/plugins/pom.xml
@@ -6,14 +6,13 @@
     <parent>
         <artifactId>homedash</artifactId>
         <groupId>com.ftpix.homedash</groupId>
-        <version>LATEST</version>
+        <version>1.0.11</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.ftpix.homedash.plugins</groupId>
     <artifactId>plugins</artifactId>
     <packaging>pom</packaging>
-    <version>1.0.6</version>
     <modules>
         <module>systeminfo</module>
         <module>docker</module>
@@ -33,13 +32,13 @@
         <dependency>
             <groupId>com.ftpix.homedash</groupId>
             <artifactId>models</artifactId>
-            <version>1.0.6</version>
+            <version>${project.version}</version>
         </dependency>
 
         <dependency>
             <groupId>com.ftpix.homedash</groupId>
             <artifactId>notifications</artifactId>
-            <version>1.0.6</version>
+            <version>${project.version}</version>
         </dependency>
 
     </dependencies>
