--- a/plugins/sonarrtv/pom.xml
+++ b/plugins/sonarrtv/pom.xml
@@ -7,11 +7,11 @@
     <parent>
         <groupId>com.ftpix.homedash.plugins</groupId>
         <artifactId>plugins</artifactId>
-        <version>LATEST</version>     </parent>
+        <version>1.0.11</version>
+    </parent>
 
     <artifactId>sonarrtv</artifactId>
     <name>sonarrtv</name>
-    <version>1.0.6</version>
     <url>http://maven.apache.org</url>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
