--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.ftpix.homedash</groupId>
     <artifactId>homedash</artifactId>
-    <version>1.0.6</version>
+    <version>1.0.11</version>
     <name>Archetype - homedash</name>
     <url>http://maven.apache.org</url>
     <packaging>pom</packaging>
@@ -36,6 +36,15 @@
         </pluginRepository>
 
     </pluginRepositories>
+
+    <!-- https://mvnrepository.com/artifact/org.codehaus.mojo/versions-maven-plugin -->
+    <dependencies>
+        <dependency>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>versions-maven-plugin</artifactId>
+            <version>2.3</version>
+        </dependency>
+    </dependencies>
     <build>
         <pluginManagement>
             <plugins>
