--- a/web/pom.xml
+++ b/web/pom.xml
@@ -7,13 +7,12 @@
     <parent>
         <groupId>com.ftpix.homedash</groupId>
         <artifactId>homedash</artifactId>
-        <version>LATEST</version>
+        <version>1.0.11</version>
     </parent>
 
 
     <artifactId>web</artifactId>
     <name>web</name>
-    <version>1.0.9</version>
     <url>http://maven.apache.org</url>
 
     <properties>
@@ -105,13 +104,13 @@
         <dependency>
             <groupId>com.ftpix.homedash</groupId>
             <artifactId>notifications</artifactId>
-            <version>1.0.6</version>
+            <version>${project.version}</version>
         </dependency>
 
         <dependency>
             <groupId>com.ftpix.homedash</groupId>
             <artifactId>updater</artifactId>
-            <version>${version}</version>
+            <version>${project.version}</version>
             <exclusions>
                 <exclusion>
                     <artifactId>jackson-annotations</artifactId>
@@ -132,68 +131,73 @@
         <dependency>
             <groupId>com.ftpix.homedash.plugins</groupId>
             <artifactId>systeminfo</artifactId>
-            <version>1.0.6</version>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>com.ftpix.homedash.plugins</groupId>
             <artifactId>docker</artifactId>
-            <version>1.0.7</version>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>com.ftpix.homedash.plugins</groupId>
             <artifactId>sonarrtv</artifactId>
-            <version>1.0.6</version>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>com.ftpix.homedash.plugins</groupId>
             <artifactId>harddisk</artifactId>
-            <version>1.0.6</version>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>com.ftpix.homedash.plugins</groupId>
             <artifactId>transmission</artifactId>
-            <version>1.0.6</version>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>com.ftpix.homedash.plugins</groupId>
             <artifactId>pihole</artifactId>
-            <version>1.0.6</version>
+            <version>${project.version}</version>
         </dependency>
 
         <dependency>
             <groupId>com.ftpix.homedash.plugins</groupId>
             <artifactId>portmapper</artifactId>
-            <version>1.0.6</version>
+            <version>${project.version}</version>
         </dependency>
 
         <dependency>
             <groupId>com.ftpix.homedash.plugins</groupId>
             <artifactId>couchpotato</artifactId>
-            <version>1.0.6</version>
+            <version>${project.version}</version>
         </dependency>
 
         <dependency>
             <groupId>com.ftpix.homedash.plugins</groupId>
             <artifactId>networkmonitor</artifactId>
-            <version>1.0.6</version>
+            <version>${project.version}</version>
         </dependency>
 
         <dependency>
             <groupId>com.ftpix.homedash.plugins</groupId>
             <artifactId>dynamicdns</artifactId>
-            <version>1.0.7</version>
+            <version>${project.version}</version>
         </dependency>
 
         <dependency>
             <groupId>com.ftpix.homedash.plugins</groupId>
             <artifactId>googlepubliccalendar</artifactId>
-            <version>1.0.6</version>
+            <version>${project.version}</version>
         </dependency>
 
         <dependency>
             <groupId>com.ftpix.homedash.plugins</groupId>
             <artifactId>mma</artifactId>
-            <version>1.0.6</version>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.ftpix.homedash</groupId>
+            <artifactId>models</artifactId>
+            <version>1.0.11</version>
         </dependency>
     </dependencies>
 
@@ -315,7 +319,10 @@
                 <version>1.1.1</version>
                 <configuration>
                     <description>
-                        Close docker plugin executor to avoid leaks
+                        - Fix docker plugin icon
+                        - Fix version mess usin versions-maven-plugin
+                        - Add environment variable to docker container details
+                        - Fix DynDNS IP refresh date that was showing last check instead of last update
                     </description>
                     <releaseName>${version}</releaseName>
                     <tag>${version}</tag>
