--- a/web/pom.xml
+++ b/web/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>com.ftpix.homedash</groupId>
         <artifactId>homedash</artifactId>
-        <version>1.0.11</version>
+        <version>1.0.12</version>
     </parent>
 
 
@@ -197,7 +197,13 @@
         <dependency>
             <groupId>com.ftpix.homedash</groupId>
             <artifactId>models</artifactId>
-            <version>1.0.11</version>
+            <version>1.0.12</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>com.ftpix.homedash.plugins</groupId>
+            <artifactId>dockercompose</artifactId>
+            <version>${project.version}</version>
         </dependency>
     </dependencies>
 
