--- a/web/pom.xml
+++ b/web/pom.xml
@@ -325,7 +325,7 @@
                 <version>1.1.1</version>
                 <configuration>
                     <description>
-                        Add simple docker compose plugin
+                        Fix Dynamic dns plugin wrong update date
                     </description>
                     <releaseName>${version}</releaseName>
                     <tag>${version}</tag>
