--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.ftpix.homedash</groupId>
     <artifactId>homedash</artifactId>
-    <version>1.0.14</version>
+    <version>1.0.15</version>
     <name>Archetype - homedash</name>
     <url>http://maven.apache.org</url>
     <packaging>pom</packaging>
@@ -43,6 +43,7 @@
             <groupId>org.codehaus.mojo</groupId>
             <artifactId>versions-maven-plugin</artifactId>
             <version>2.3</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
     <build>
