--- a/web/pom.xml
+++ b/web/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>com.ftpix.homedash</groupId>
         <artifactId>homedash</artifactId>
-        <version>1.0.16</version>
+        <version>1.0.17</version>
     </parent>
 
 
@@ -197,7 +197,7 @@
         <dependency>
             <groupId>com.ftpix.homedash</groupId>
             <artifactId>models</artifactId>
-            <version>1.0.16</version>
+            <version>1.0.17</version>
         </dependency>
 
         <dependency>
@@ -325,7 +325,7 @@
                 <version>1.1.1</version>
                 <configuration>
                     <description>
-                        Allow operation on multiple torrents for transmission plugin
+                        Add file browser and basic file operation on hard disk plugin
                     </description>
                     <releaseName>${version}</releaseName>
                     <tag>${version}</tag>
