--- a/web/pom.xml
+++ b/web/pom.xml
@@ -41,7 +41,7 @@
         <dependency>
             <groupId>com.sparkjava</groupId>
             <artifactId>spark-core</artifactId>
-            <version>2.5.5</version>
+            <version>2.6.0</version>
         </dependency>
 
 
@@ -63,7 +63,7 @@
         <dependency>
             <groupId>com.sparkjava</groupId>
             <artifactId>spark-template-jade</artifactId>
-            <version>2.3</version>
+            <version>2.5.5</version>
         </dependency>
 
 
@@ -325,7 +325,10 @@
                 <version>1.1.1</version>
                 <configuration>
                     <description>
-                        Adding animations and ajusting some text file size to avoid line breaks on some modules
+                        Make module-loading overlay adapt the module background color.
+                        Now using less tacky animation for the module pre-loading
+                        The main websocket thread count is now the same as the total amount of modules to avoid having
+                        one module blocking other modules from refreshing
                     </description>
                     <releaseName>${version}</releaseName>
                     <tag>${version}</tag>
