--- a/web/pom.xml
+++ b/web/pom.xml
@@ -41,7 +41,7 @@
         <dependency>
             <groupId>com.sparkjava</groupId>
             <artifactId>spark-core</artifactId>
-            <version>2.6.0</version>
+            <version>2.5.5</version>
         </dependency>
 
 
@@ -64,6 +64,16 @@
             <groupId>com.sparkjava</groupId>
             <artifactId>spark-template-jade</artifactId>
             <version>2.5.5</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>spark-core</artifactId>
+                    <groupId>com.sparkjava</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>commons-logging</artifactId>
+                    <groupId>commons-logging</groupId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
 
@@ -198,6 +208,12 @@
             <groupId>com.ftpix.homedash</groupId>
             <artifactId>models</artifactId>
             <version>1.0.19</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>jade4j</artifactId>
+                    <groupId>de.neuland-bfi</groupId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <dependency>
