add Log reader plugin add possibility for a plugin to do something when there's at least one client and when the last client leaves the ui

--- a/plugins/pom.xml
+++ b/plugins/pom.xml
@@ -27,6 +27,7 @@
         <module>googlepubliccalendar</module>
         <module>mma</module>
         <module>dockercompose</module>
+        <module>logreader</module>
     </modules>
 
     <dependencies>
