--- a/web/pom.xml
+++ b/web/pom.xml
@@ -218,6 +218,12 @@
 
         <dependency>
             <groupId>com.ftpix.homedash.plugins</groupId>
+            <artifactId>logreader</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.ftpix.homedash.plugins</groupId>
             <artifactId>dockercompose</artifactId>
             <version>${project.version}</version>
         </dependency>
